--- a/css/styles.css
+++ b/css/styles.css
@@ -1,114 +1,232 @@
-h1 {
-    font-size: 5.625rem;
-    font-family: sans-serif;
-    margin: 50px auto 0 auto;
-    color: #66BFBF;
-  }
-
-h2 {
-  font-size: 2.25rem;
-  color: #66BFBF;
-  font-weight: normal;
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
 }
 
-.pmp {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
+.active, .collapsible:hover {
+  background-color: #555;
 }
-.safe {
-  width: 25%;
+
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
   float: right;
-  margin-left: 30px;
+  margin-left: 5px;
 }
 
-.pmp-skill-desc {
-  clear: left;
+.active:after {
+  content: "\2212";
 }
 
-.safe-skill-desc {
-  clear: right;
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: auto;
+  /*transition: max-height 0.2s ease-out;*/
+  transition: max-height 0s ease-out;
+  background-color: #f1f1f1;
 }
 
 body {
-    margin: 0;
-    text-align: center;
-    font-family: verdana, sans-serif;
-    font-family: 'Open Sans', sans-serif;
+  font-family: "Montserrat";
+  text-align: center;
 }
 
-.skill-row {
-  width: 50%;
-  margin: 100px auto 100px auto;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat-Bold";
+}
+
+p {
+  color: #8f8f8f;
   text-align: left;
-  line-height: 2;
 }
 
-.text-title {
-  /*display: block;*/
-  text-align: center;
+/* Headings */
+
+.big-heading {
+  font-family: "Montserrat-Black";
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 
-.skills {
-  text-align: center;
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-.top-container {
-  background-color: #E4F9F5;
-  /*position: relative;
-  padding-top: 100px;
- height: 200px;
-  width: 200px;
-  border: solid 10px;
-  border-color: black;
-  padding: 20px;
+/* Containers */
+
+.container-fluid{
+  padding: 7% 15%;
+}
+
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
+  /*background-color: #fff;*/
+  background-color: #ffcc99;
+}
+.copyright {
+  color: #EAF6F6;
+  font-size: 1.2rem;
+  padding: 20px 0;
+  align: center;
+}
+
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+
+.nav-link {
+  /*font-size: 1.2rem;*/
+  font-size: 1.0rem;
+  font-family: "Montserrat-Light";
+}
+
+/* Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Section */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+
+/*.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}*/
+.title-image {
+  width: 100%;
+  transform: rotate(0deg);
   position: relative;
-  left: 0px;
-  display: inline-block; */
-
+  right: 0%;
 }
-.middle-container {
-/*  background-color: red;
-  height: 200px;
-  width: 200px;
-border: solid 20px;
-  border-color: black;
-  margin-left: 260px;
-  display: inline-block;
+
+/* Features Section */
+
+#features {
   position: relative;
-  left: 0px;
-  position: absolute;
-  left: 200px;
-  bottom: 200x; */
 }
 
-.bottom-container {
-/*  background-color: blue;
-  height: 200px;
-  width: 200px;
-  border: solid 10px;
-  border-color: black;
-  display: inline-block;
-  margin-left: 500px;
-  position: relative;
-  left: 0px;
-  position: absolute;
-  left: 400px;
-  top: 400px; */
+.feature-title {
+  font-size: 1.5rem;
 }
 
-.top-cloud {
-  position: absolute;
-  right: 300px;
-  top: 50px;
+.feature-box {
+  padding: 4.5%;
 }
 
-.bottom-cloud {
-  position: absolute;
-  left: 300px;
-  bottom: 300px;
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
 }
 
-.pro {
-  text-decoration: underline;
+.icon:hover {
+  color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+  background-color: #ef8172;
+}
+
+.testimonial-text {
+  /*font-size: 3rem;*/
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+
+#pricing {
+  padding: 100px;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-column {
+  /*padding: 3% 2%;*/
+}
+
+/* CTA Section */
+
+
+/* Footer Section */
+
+
+.social-icon {
+  margin: 20px 10px;
+}
+
+@media (max-width: 1028px) {
+
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
 }
