--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,7 @@ p {
 
 #title {
 /*  background-color: #ff4c68; */
-  background-color:#FFEFD5
-  color: #fff;
+  background-color:#bda680;
   text-align: center;
 }
 
@@ -218,7 +217,8 @@ p {
 
 /* Footer Section */
 #footer {
-  background-color: #f7beb7;
+  /*background-color: #f7beb7;*/
+  background-color: #bda680;
 
 }
 
