--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ p {
 
 .navbar-brand {
   /*font-family: "Ubuntu";*/
-  font-family: "Roboto";
+  font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
 }
